[project]
name = "twin_city_climate_compass"
requires-python = ">= 3.11"
dependencies = [
  "streamlit",
  "pandas",
  "numpy",
  "altair",
]
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
twin_city_climate_compass = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
statsmodels = ">=0.14.5,<0.15"
